# AgentComOS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  RELEASE_MANIFEST.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docker/: Dockerfile.controller  Dockerfile.runtime-tmux  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.runtime-tmux.yml
docs/: 00_PRODUCT_SPEC_V2_8.md  01_ENGINEERING_SPEC.md  02_ARCHITECTURE.md  03_PROTOCOLS_AND_SCHEMAS.md  04_DEVELOPMENT_ROADMAP.md  05_ACCEPTANCE_MATRIX.md  06_CODEX_TASKS.md  07_ANTIGRAVITY_TASKS.md  08_MODULE_SPEC_INDEX.md  09_RUNTIME_PROFILES.md  11_ENGINEERING_CONTRACT_V2_8_3.md  12_DATA_DRIVEN_DEVELOPMENT.md  13_CONTRACT_HARDENING_V2_8_4.md  14_RELEASE_MANIFEST.md  15_CODEX_ANTIGRAVITY_COLLABORATION.md  16_CONTROLLER_IMPLEMENTATION_SPEC.md  17_PHASED_DELIVERY_PLAN.md  18_ACCEPTANCE_GATES.md  19_DECISION_FEYNMAN_ADOPTION_POLICY.md  20_DATA_LEDGER_EVENT_MODEL.md  21_COMMERCIAL_DEPLOYMENT_READINESS.md  22_RUNTIME_INSTALLATION_EVOLUTION.md  23_PR_AND_REVIEW_WORKFLOW.md  24_ACTIVE_DOCUMENTS_AND_ARCHIVE_POLICY.md  25_PHASE_ACCEPTANCE_REPORTING.md  26_G1_TO_G2_HANDOFF.md  27_RUNTIME_JOB_ROUTING_RULES.md
schemas/: approval_request.schema.json  batch_result.schema.json  change_set.schema.json  context_capsule.schema.json  cost_usage_record.schema.json  credential_request.schema.json  critic_report.schema.json  daily_operating_packet.schema.json  decision_need_score.schema.json  decision_record.schema.json  (+43 more)
(+548 files in other folders)
