[project]
name = "agentcomos"
version = "0.0.6"
description = "AgentComOS v2.8.6 phase-gated controlled-to-industrial engineering starter"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.1", "jsonschema>=4.21.0", "typer>=0.12.0", "rich>=13.7.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
agentcomos = "agentcomos.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
